samples/_failures_safe/1761452615_1fdadb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9ae7170.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_b9ae7170.c:151:12: error: missing terminating " character
  151 |     printf("
      |            ^
./samples/SAFE/__tmp_b9ae7170.c:151:5: error: expected expression at end of input
  151 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_b9ae7170.c:151:5: error: expected declaration or statement at end of input
